# soa-rs

./: .gitignore  .neoconf.json  Cargo.toml  LICENSE  README.md  README.tpl  profile.fish  rust-analyzer.json
.claude/: settings.local.json
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
scripts/: asm.fish  bench.fish  executable_name.jq  profile.fish
soa-rs-derive/: Cargo.toml
soa-rs-derive/src/: fields.rs  from_soa_ref_derive.rs  lib.rs  soars_derive.rs  zst.rs
soa-rs-derive/src/from_soa_ref/: mod.rs
soa-rs-derive/src/soa_clone/: mod.rs
soa-rs-derive/src/soars/: fields.rs  mod.rs  set_by_path_error.rs  soa_attrs.rs  soa_derive.rs  soa_derive_parse.rs  zst.rs
soa-rs-testing/: Cargo.toml
soa-rs-testing/benches/: benchmark.rs
soa-rs-testing/src/: lib.rs  main.rs
soapy-derive/: Cargo.toml
soapy-derive/src/: fields.rs  lib.rs  zst.rs
soapy-shared/: Cargo.toml
soapy-shared/src/: array.rs  lib.rs  raw_soa.rs  slice.rs  slices.rs  soa.rs  soa_raw.rs  soapy.rs  with_ref.rs
soapy-testing/: Cargo.toml
soapy-testing/benches/: benchmark.rs
soapy-testing/src/: lib.rs  main.rs
src/: as_slice.rs  as_soa_ref.rs  borrow_tests.rs  chunks_exact.rs  drain.rs  dst.rs  eq_impl.rs  from_soa_ref.rs  index.rs  into_iter.rs  iter.rs  iter_mut.rs  iter_raw.rs  lib.rs  macros.rs  owned_from_fields.rs  raw_value_iter.rs  serde.rs  slice.rs  slice_mut.rs  slice_raw.rs  slice_ref.rs  soa.rs  soa_array.rs  soa_clone.rs  soa_deref.rs  soa_raw.rs  soa_ref.rs  soapy.rs  soars.rs  with_ref.rs
