[package]
name = "soa-rs"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A Vec-like structure-of-arrays container"
homepage = "https://github.com/tim-harding/soa-rs"
repository = "https://github.com/tim-harding/soa-rs"
readme = "README.md"

[profile.bench]
# For profiling
debug = true 

[workspace]
members = ["soa-rs-derive", "soa-rs-testing"]

[dependencies]
soa-rs-derive = { path = "soa-rs-derive", version = "0.3.0" }
