[package]
name = "soa-rs"
version = "0.8.1"
edition = "2024"
license = "MIT"
description = "A Vec-like structure-of-arrays container"
homepage = "https://github.com/tim-harding/soa-rs"
repository = "https://github.com/tim-harding/soa-rs"
readme = "README.md"
categories = ["data-structures", "no-std"]

[profile.bench]
# For profiling
debug = true

[workspace]
members = ["soa-rs-derive", "soa-rs-testing"]

[dependencies.soa-rs-derive]
version = "0.8.0"
path = "soa-rs-derive"

[dependencies.serde]
version = "1.0.199"
optional = true
default-features = false

[features]
default = []
serde = ["dep:serde"]
