[package]
name = "soa-rs-derive"
version = "0.7.5"
edition = "2021"
license = "MIT"
description = "Proc macro derive for soa-rs"
homepage = "https://github.com/tim-harding/soa-rs"
repository = "https://github.com/tim-harding/soa-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
