[package]
name = "soapy-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proc macro derive for soapy"
homepage = "https://github.com/tim-harding/soapy"
repository = "https://github.com/tim-harding/soapy"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
